<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/loginpanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="User name" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="dstAddress" />

        <TextView
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connect..." />
        
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

 	<LinearLayout
        android:id="@+id/gamepanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >
        
	      <TableLayout  
	      android:id="@+id/playArea"  
	      android:layout_width="match_parent"  
	      android:layout_height="wrap_content"  
	      android:layout_marginTop="10dp" >  
	    
	      <TableRow  
	        android:id="@+id/tableRow1"  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:gravity="center_horizontal" >  
	    
	        <Button  
	          android:id="@+id/one"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/one"  
	          android:textSize="70dp" />  
	    
	        <Button  
	          android:id="@+id/two"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/two"  
	          android:textSize="70dp" />  
	    
	        <Button  
	          android:id="@+id/three"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/three"  
	          android:textSize="70dp" />  
	      </TableRow>  
	    
	      <TableRow  
	        android:id="@+id/tableRow2"  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:gravity="center_horizontal" >  
	    
	        <Button  
	          android:id="@+id/four"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/four"  
	          android:textSize="70dp" />  
	    
	        <Button  
	          android:id="@+id/five"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/five"  
	          android:textSize="70dp" />  
	    
	        <Button  
	          android:id="@+id/six"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/six"  
	          android:textSize="70dp" />  
	      </TableRow>  
	    
	      <TableRow  
	        android:id="@+id/tableRow3"  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:gravity="center_horizontal" >  
	    
	        <Button  
	          android:id="@+id/seven"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/seven"  
	          android:textSize="70dp" />  
	    
	        <Button  
	          android:id="@+id/eight"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/eight"  
	          android:textSize="70dp" />  
	    
	        <Button  
	          android:id="@+id/nine"  
	          android:layout_width="100dp"  
	          android:layout_height="100dp"  
	          android:text="@string/nine"  
	          android:textSize="70dp" />  
	      </TableRow>  
	    </TableLayout>   
	    
	    <TableLayout  
	      android:id="@+id/tableLayout1"  
	      android:layout_width="match_parent"  
	      android:layout_height="wrap_content" >  
	    
	      <TableRow  
	        android:id="@+id/tableRow4"  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:layout_marginTop="10dp"  
	        android:gravity="center_horizontal" >  
	    
	        <TextView  
	          android:id="@+id/human"  
	          android:layout_width="wrap_content"  
	          android:layout_height="wrap_content"  
	          android:text="@string/human" />  
	    
	        <TextView  
	          android:id="@+id/humanCount"  
	          android:layout_width="wrap_content"  
	          android:layout_height="wrap_content"  
	          android:layout_marginRight="10dp" />  
	    
	        <TextView  
	          android:id="@+id/ties"  
	          android:layout_width="wrap_content"  
	          android:layout_height="wrap_content"  
	          android:text="@string/ties" />  
	    
	        <TextView  
	          android:id="@+id/tiesCount"  
	          android:layout_width="wrap_content"  
	          android:layout_height="wrap_content"  
	          android:layout_marginRight="10dp" />  
	    
	        <TextView  
	          android:id="@+id/opponent:"  
	          android:layout_width="wrap_content"  
	          android:layout_height="wrap_content"  
	          android:text="@string/opponent" />  
	    
	        <TextView  
	          android:id="@+id/opponentCount"  
	          android:layout_width="wrap_content"  
	          android:layout_height="wrap_content" />  
	    
	      </TableRow>  
	    </TableLayout> 
	        
	    
	    <TextView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
	    <LinearLayout
        android:id="@+id/loginpanel1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
		    <Button
	            android:id="@+id/disconnect"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Disconnect" />
		    <Button
	            android:id="@+id/continues"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Continue" />
		    <LinearLayout
	        android:id="@+id/gamepanel2"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
	        
	 	    <TextView
	            android:id="@+id/player"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	 	    
	 	    <TextView
	            android:id="@+id/opponent"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	    
	    	</LinearLayout>
		</LinearLayout>
    
    </LinearLayout>

</LinearLayout>